--- a/_pages/music_puzzle_game.html
+++ b/_pages/music_puzzle_game.html
@@ -76,7 +76,7 @@ One of the applications is the <strong>Music Medley</strong> which is to find a 
 <audio controls controlsList="nodownload"><source src="../files/audio/puzzlegame/ncs_2.mp3" type="audio/mpeg" />Your browser does not support the audio element.</audio>
 <hr>
 
-<h3><span style=color:CornflowerBlue>YouTube links of music medleys that used in our experiments.</span></h3>
+<h3><span style=color:CornflowerBlue>YouTube links of music medleys that are used in our experiments.</span></h3>
 <ul class="list">
 <li><a href="https://www.youtube.com/watch?v=Fjvkg700fYs">https://www.youtube.com/watch?v=Fjvkg700fYs</a></li>
 <li><a href="https://www.youtube.com/watch?v=uWfJlnLh-cY">https://www.youtube.com/watch?v=uWfJlnLh-cY</a></li>
