--- a/_pages/music_thumbnailing.html
+++ b/_pages/music_thumbnailing.html
@@ -5,7 +5,8 @@ permalink: /music_thumbnailing/
 author_profile: true
 ---
 
-* Noted: this example page is based on the model in the <a href="https://remyhuang.github.io/files/huang17apsipa.pdf">APSIPA'17<a/>. We have published another work on <a href="https://arxiv.org/abs/1802.10495">ArXiv'18<a/>.
+* Noted: this example page is based on the model in the <a href="https://remyhuang.github.io/files/huang17apsipa.pdf">[APSIPA'17]<a/>. 
+We have published another work on <a href="https://arxiv.org/abs/1802.10495">[ArXiv'18]<a/>. <br />
 
 The goal of music thumbnailing is to find a short, continuous segment of a song that represents the whole song that also known as 
 Music Highlight Extraction. Let us show eight pop songs for demo! (we can extract any number of seconds of music segments by our 
