--- a/_pages/music_thumbnailing.html
+++ b/_pages/music_thumbnailing.html
@@ -5,8 +5,8 @@ permalink: /music_thumbnailing/
 author_profile: true
 ---
 
-* Noted: this example page is based on the model in the <a href="https://remyhuang.github.io/files/huang17apsipa.pdf">[APSIPA'17]<a/>. 
-We have published another work on <a href="https://arxiv.org/abs/1802.10495">[ArXiv'18]<a/>. <br />
+* Noted: this example page is based on the model in the <font color="red"><a href="https://remyhuang.github.io/files/huang17apsipa.pdf">[APSIPA'17]<a/></font>. 
+We have published another work on <font color="red"><a href="https://transactions.ismir.net/articles/10.5334/tismir.14/">[TISMIR'18]<a/></font>. <br />
 
 <br />
       
