--- a/_pages/music_puzzle_game.html
+++ b/_pages/music_puzzle_game.html
@@ -5,6 +5,8 @@ permalink: /music_puzzle_game/
 author_profile: true
 ---
 
+<font color="red">Code is released<a href="https://github.com/remyhuang/music-puzzle-games">[github]<a/></font>
+
 The goal of music puzzle game is to rearrange several music segments to reconstruct the original song. 
 We will show the puzzle pieces of each music sets and results from our proposed method and another compared method. 
 There are total two examples that the first is a good example and the second is a not-so-good example. 
