--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -19,7 +19,10 @@ author_profile: true
                 return r
             };
             var sampleIndex = myGetRandom(1, 200);
-            alert(sampleIndex)
+            document.getElementById("test").innerHTML = sampleIndex;
         </script>
     </head>
+    <body>
+        <p id="test"></p>
+    </body>
 </html>
