--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -23,6 +23,7 @@ author_profile: true
         </script>
     </head>
     <body>
-        <p id="test"></p>
+        <p id="test"></p> <br>
+        <p id="test1">test</p>
     </body>
 </html>
