--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -10,7 +10,7 @@ author_profile: true
     <head>
         <title>User Study for Transformer</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<!--         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
         <!-- javascript onclick event -->
         <script type="text/javascript">
             // for randomly choose samples
@@ -24,6 +24,6 @@ author_profile: true
     </head>
     <body>
         <p id="test"></p> <br>
-        <p id="test1">test</p>
+        <p id="test1">test1</p>
     </body>
 </html>
