--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -10,20 +10,15 @@ author_profile: true
     <head>
         <title>User Study for Transformer</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<!--         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
-        <!-- javascript onclick event -->
-        <p id="test"></p> <br>
-        <script type="text/javascript">
-            // for randomly choose samples
-            function myGetRandom(min, max) {
-                var r = Math.floor(Math.random()*(max-min+1))+min;
-                return r
-            };
-            var sampleIndex = myGetRandom(1, 200);
-            document.getElementById("test").innerHTML = sampleIndex;
-        </script>
     </head>
     <body>
-        <p id="test1">test1</p>
+        <form>
+            <select name="YourLocation">
+            　<option value="Taipei">台北</option>
+            　<option value="Taoyuan">桃園</option>
+            　<option value="Hsinchu">新竹</option>
+            　<option value="Miaoli">苗栗</option>
+            </select>
+            </form>
     </body>
 </html>
