--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -13,6 +13,15 @@ author_profile: true
         <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
     </head>
     <body>
+        <script>
+            function myGetRandom(min, max) {
+                var r = Math.floor(Math.random()*(max-min+1))+min;
+                return r
+            };
+            var sampleIndex = myGetRandom(1, 200);
+            alert(sampleIndex)
+        </script>
+        
         <div id="container">
             <!-- javascript onclick event -->
             <script type="text/javascript">
@@ -22,7 +31,6 @@ author_profile: true
                     return r
                 };
                 var sampleIndex = myGetRandom(1, 200);
-                alert(sampleIndex)
 
                 // for get item
                 function myGetItem() {
@@ -89,7 +97,7 @@ author_profile: true
                 };
             </script>
             <!-- description -->
-            <h2>User Study for Long-Term Pop Piano Generation via Transformer</h2>
+            <h2>User Study for Long-Term Pop Piano Generation via Transformer !!!!!!!!!</h2>
             <p>
                 Hi, we are from <a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a> at Academia Sinica, Taiwan. <br>
                 We would like to develop an approach to automatically generate long-term pop piano with Transformer (one of the deep learning modules). <br><br>
