--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -8,7 +8,7 @@ author_profile: true
 <!DOCTYPE html>
 <html>
     <head>
-<!--         <title>User Study for Transformer</title> -->
+        <title>User Study for Transformer</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
     </head>
@@ -25,6 +25,45 @@ author_profile: true
         <div id="container">
             <!-- javascript onclick event -->
             <script type="text/javascript">
+                // for get item
+                function myGetItem() {
+                    // for musical background
+                    var handler_background = document.getElementsByName("background");
+                    var background = '0'
+                    for(i = 0; i < handler_background.length; i++) { 
+                        if(handler_background[i].checked) 
+                        background = handler_background[i].value; 
+                    }
+
+                    // for best choice
+                    var handler_best = document.getElementsByName("best_choice");
+                    var best_choice = '0'
+                    for(i = 0; i < handler_best.length; i++) { 
+                        if(handler_best[i].checked) 
+                        best_choice = handler_best[i].value; 
+                    }
+
+                    // for worst choice
+                    var handler_worst = document.getElementsByName("worst_choice");
+                    var worst_choice = '0'
+                    for(i = 0; i < handler_worst.length; i++) { 
+                        if(handler_worst[i].checked) 
+                        worst_choice = handler_worst[i].value; 
+                    }
+
+                    // check
+                    if (background == '0' || best_choice == '0' || worst_choice == '0') {
+                        alert("Warning! You haven't finish some options!!");
+                    } else if (best_choice == worst_choice) {
+                        alert("Warning! You choose the same option for the best and worst!!");
+                    } else {
+                        // submit
+                        myPostToGoogle();
+                        // refresh
+                        alert('Thank you!!!');
+                        window.location.reload();
+                    }
+                };
                 // post to google form
                 function myPostToGoogle() {
                     var field2 = $("input[type='radio'][name='background']:checked").val();
