--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -20,6 +20,7 @@ author_profile: true
                 return r
             };
             var sampleIndex = myGetRandom(1, 200);
+            alert(sampleIndex);
         </script>
         
         <div id="container">
@@ -90,7 +91,7 @@ author_profile: true
                 };
             </script>
             <!-- description -->
-            <h2>User Study for Long-Term Pop Piano Generation via Transformer</h2>
+            <h2>User Study for Long-Term Pop Piano Generation via Transformer !!!</h2>
             <p>
                 Hi, we are from <a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a> at Academia Sinica, Taiwan. <br>
                 We would like to develop an approach to automatically generate long-term pop piano with Transformer (one of the deep learning modules). <br><br>
