--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -5,168 +5,15 @@ permalink: /music_generation/
 author_profile: true
 ---
 
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>User Study for Transformer</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
-    </head>
     <body>
         <script>
-            // for randomly choose samples
             function myGetRandom(min, max) {
                 var r = Math.floor(Math.random()*(max-min+1))+min;
                 return r
             };
             var sampleIndex = myGetRandom(1, 200);
-            alert(sampleIndex);
+            alert(sampleIndex)
         </script>
-        
-        <div id="container">
-            <!-- javascript onclick event -->
-            <script type="text/javascript">
-                // for get item
-                function myGetItem() {
-                    // for musical background
-                    var handler_background = document.getElementsByName("background");
-                    var background = '0'
-                    for(i = 0; i < handler_background.length; i++) { 
-                        if(handler_background[i].checked) 
-                        background = handler_background[i].value; 
-                    }
-
-                    // for best choice
-                    var handler_best = document.getElementsByName("best_choice");
-                    var best_choice = '0'
-                    for(i = 0; i < handler_best.length; i++) { 
-                        if(handler_best[i].checked) 
-                        best_choice = handler_best[i].value; 
-                    }
-
-                    // for worst choice
-                    var handler_worst = document.getElementsByName("worst_choice");
-                    var worst_choice = '0'
-                    for(i = 0; i < handler_worst.length; i++) { 
-                        if(handler_worst[i].checked) 
-                        worst_choice = handler_worst[i].value; 
-                    }
-
-                    // check
-                    if (background == '0' || best_choice == '0' || worst_choice == '0') {
-                        alert("Warning! You haven't finish some options!!");
-                    } else if (best_choice == worst_choice) {
-                        alert("Warning! You choose the same option for the best and worst!!");
-                    } else {
-                        // submit
-                        myPostToGoogle();
-                        // refresh
-                        alert('Thank you!!!');
-                        window.location.reload();
-                    }
-                };
-                // post to google form
-                function myPostToGoogle() {
-                    var field2 = $("input[type='radio'][name='background']:checked").val();
-                    var field3 = $("input[type='radio'][name='best_choice']:checked").val();
-                    var field4 = $("input[type='radio'][name='worst_choice']:checked").val();
-                    $.ajax({
-                        url: "https://docs.google.com/forms/d/e/1FAIpQLSeb0Dz_tRzTmZ21jXV66PQ1xrQqeCPk6TISAGQh9b_0GtuhTg/formResponse",
-                        data: {"entry.44284425": sampleIndex, "entry.1405676118": field2, "entry.1813362143": field3, "entry.992626456": field4},
-                        type: "POST",
-                        dataType: "xml",
-                        statusCode: {
-                            0: function() {
-                                //Success message
-                            },
-                            200: function() {
-                                //Success Message
-                            },
-                            400: function() {
-                                // Fail Message
-                                alert("Something is wrong!")
-                            }
-                        }
-                    });
-                };
-            </script>
-            <!-- description -->
-            <h2>User Study for Long-Term Pop Piano Generation via Transformer !!!</h2>
-            <p>
-                Hi, we are from <a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a> at Academia Sinica, Taiwan. <br>
-                We would like to develop an approach to automatically generate long-term pop piano with Transformer (one of the deep learning modules). <br><br>
-                In the following questionnaire, we generate 4 music samples which are based on the same 5-bar prompt randomly cut from real (human-made) music. <br>
-                Each sample includes the prompt in the beginning (~10 seconds). After the prompt, you can find out how the machines try to "continue" it. <br>
-                You will be asked to rate which sample is the best and worst respectively. <br>
-                And everytime you refresh the webpage (or after you press the "submit"), you could get different music samples (overall, we have 200 samples). <br>
-                We would appreciate it if you could help us fill this questionnaire several times. THANKS! <br><br>
-                If you have any questions, please feel free to contact: <a href="https://remyhuang.github.io/" target="_blank">Yu-Siang Huang</a> <br>
-            </p> 
-
-            <!-- audio contents -->
-            <h2 id="header2"></h2>
-            <script language="javascript">
-                document.getElementById("header2").innerHTML = "Machine-Generated Samples (Continuation): No." + sampleIndex; 
-            </script>
-
-            <!-- <figcaption>Sample 1.</figcaption>
-            <audio controls controlsList="nodownload">
-                <source src="test.mp3" type="audio/mpeg"/>Your browser does not support the audio element.
-            </audio><br><br>
-
-            <figcaption>Sample 2.</figcaption>
-            <audio controls controlsList="nodownload">
-                <source src="test.mp3" type="audio/mpeg"/>Your browser does not support the audio element.
-            </audio><br><br>
-
-            <figcaption>Sample 3.</figcaption>
-            <audio controls controlsList="nodownload">
-                <source src="test.mp3" type="audio/mpeg"/>Your browser does not support the audio element.
-            </audio><br><br>
-
-            <figcaption>Sample 4.</figcaption>
-            <audio controls controlsList="nodownload">
-                <source src="test.mp3" type="audio/mpeg"/>Your browser does not support the audio element.
-            </audio><br><br> -->
-
-            <!-- radio button -->
-            <h2>Questionnaire</h2>
-            <ol>
-                <li>
-                    <figcaption>Are you studying in music-related departments or engaged in music-related industries?</figcaption>
-                    <form>
-                        <input type="radio" name="background" value="Yes"> Yes
-                        <input type="radio" name="background" value="No"> No
-                    </form>
-                </li> <br>
-                <li>
-                    <figcaption>Which sample is the best?</figcaption>
-                    <form>
-                        <input type="radio" name="best_choice" value="Sample 1."> Sample 1.
-                        <input type="radio" name="best_choice" value="Sample 2."> Sample 2.
-                        <input type="radio" name="best_choice" value="Sample 3."> Sample 3.
-                        <input type="radio" name="best_choice" value="Sample 4."> Sample 4.
-                    </form>
-                </li> <br>
-                <li>
-                    <figcaption>Which sample is the worst?</figcaption>
-                    <form>
-                        <input type="radio" name="worst_choice" value="Sample 1."> Sample 1.
-                        <input type="radio" name="worst_choice" value="Sample 2."> Sample 2.
-                        <input type="radio" name="worst_choice" value="Sample 3."> Sample 3.
-                        <input type="radio" name="worst_choice" value="Sample 4."> Sample 4.
-                    </form>
-                </li>
-            </ol>
-            
-            <!-- submit button -->
-            <p>
-                <strong>
-                    Thank you for your participation. Please press the submit button. <br>
-                    After you press the button, this page will refresh and you can directly enjoy the other samples!
-                </strong>
-            </p>
-            <button type="submit" onclick="myGetItem()">Submit</button>
-        </div>
     </body>
 </html>
