--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -7,6 +7,7 @@ author_profile: true
 
 <html>
     <body>
+        <!-- for random -->
         <script>
             function myGetRandom(min, max) {
                 var r = Math.floor(Math.random()*(max-min+1))+min;
@@ -14,6 +15,12 @@ author_profile: true
             };
             var sampleIndex = myGetRandom(1, 200);
             alert(sampleIndex)
+        </script>
+        
+        <!-- audio contents -->
+        <h2 id="header2"></h2>
+        <script>
+            document.getElementById("header2").innerHTML = "Machine-Generated Samples (Continuation): No." + sampleIndex; 
         </script>
     </body>
 </html>
