--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -29,12 +29,12 @@ author_profile: true
         <h2>Questionnaire</h2>
         <ol>
             <li>
-                <figcaption>Are you studying in music-related departments or engaged in music-related industries?</figcaption>
+                Are you studying in music-related departments or engaged in music-related industries?
                 <form>
                     <input type="radio" name="background" value="Yes"> Yes
                     <input type="radio" name="background" value="No"> No
                 </form>
-            </li> <br>
+            </li>
             <li>
                 <figcaption>Which sample is the best?</figcaption>
                 <form>
@@ -43,7 +43,7 @@ author_profile: true
                     <input type="radio" name="best_choice" value="Sample 3."> Sample 3.
                     <input type="radio" name="best_choice" value="Sample 4."> Sample 4.
                 </form>
-            </li> <br>
+            </li>
             <li>
                 <figcaption>Which sample is the worst?</figcaption>
                 <form>
