--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -31,25 +31,25 @@ author_profile: true
             <li>
                 Are you studying in music-related departments or engaged in music-related industries?
                 <form>
-                    <input type="radio" name="background" value="Yes"> Yes
+                    <input type="radio" name="background" value="Yes  "> Yes
                     <input type="radio" name="background" value="No"> No
                 </form>
             </li>
             <li>
-                <figcaption>Which sample is the best?</figcaption>
+                Which sample is the best?
                 <form>
-                    <input type="radio" name="best_choice" value="Sample 1."> Sample 1.
-                    <input type="radio" name="best_choice" value="Sample 2."> Sample 2.
-                    <input type="radio" name="best_choice" value="Sample 3."> Sample 3.
+                    <input type="radio" name="best_choice" value="Sample 1.   "> Sample 1.
+                    <input type="radio" name="best_choice" value="Sample 2.   "> Sample 2.
+                    <input type="radio" name="best_choice" value="Sample 3.   "> Sample 3.
                     <input type="radio" name="best_choice" value="Sample 4."> Sample 4.
                 </form>
             </li>
             <li>
-                <figcaption>Which sample is the worst?</figcaption>
+                Which sample is the worst?
                 <form>
-                    <input type="radio" name="worst_choice" value="Sample 1."> Sample 1.
-                    <input type="radio" name="worst_choice" value="Sample 2."> Sample 2.
-                    <input type="radio" name="worst_choice" value="Sample 3."> Sample 3.
+                    <input type="radio" name="worst_choice" value="Sample 1.   "> Sample 1.
+                    <input type="radio" name="worst_choice" value="Sample 2.   "> Sample 2.
+                    <input type="radio" name="worst_choice" value="Sample 3.   "> Sample 3.
                     <input type="radio" name="worst_choice" value="Sample 4."> Sample 4.
                 </form>
             </li>
