--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -9,7 +9,7 @@ author_profile: true
     <body>
         <!-- for random -->
         <script>
-            function temp() {
+            function myGetItem() {
                 alert(sampleIndex);
             };
             
