--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -8,7 +8,7 @@ author_profile: true
 <html>
     <body>
         <!-- for submit button -->
-        <script type="text/javascript">
+        <script language="javascript" type="text/javascript"> 
             function myGetItem() {
                 var handler_background = document.getElementsByName("background");
                 var background = '0'
