--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -7,6 +7,15 @@ author_profile: true
 
 <html>
     <body>
+        <select>
+            <script language="javascript" type="text/javascript"> 
+                for(var d=1;d<=31;d++)
+                {
+                    document.write("<option>"+d+"</option>");
+                }
+            </script>
+        </select>
+        
         <!-- for submit button -->
         <script language="javascript" type="text/javascript"> 
             function myGetItem() {
