--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -28,6 +28,7 @@ author_profile: true
                 alert('2');
                 alert(background);
             };
+            myGetItem();
         </script>
         
         <!-- for random -->
