--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -10,12 +10,13 @@ author_profile: true
         <!-- for submit button -->
         <script language="javascript" type="text/javascript"> 
             function myGetItem() {
-                var handler_background = document.getElementsByName("background");
-                var background = '0'
-                for(var i=0;i<handler_background.length;i++) { 
-                    if(handler_background[i].checked) 
-                    background = handler_background[i].value; 
-                }
+                alert('1');
+//                 var handler_background = document.getElementsByName("background");
+//                 var background = '0'
+//                 for(var i=0;i<handler_background.length;i++) { 
+//                     if(handler_background[i].checked) 
+//                     background = handler_background[i].value; 
+//                 }
             };
         </script>
         
