--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -10,7 +10,8 @@ author_profile: true
         <!-- for submit button -->
         <script language="javascript" type="text/javascript"> 
             function myGetItem() {
-                alert('1');
+                var handler_background = document.getElementsByName("background");
+                alert(handler_background.length);
             };
         </script>
         
