--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -11,7 +11,10 @@ author_profile: true
         <script language="javascript" type="text/javascript"> 
             function myGetItem() {
                 var handler_background = document.getElementsByName("background");
-                alert(handler_background.length);
+                for(var d=1;d<=31;d++)
+                {
+                    alert(d);
+                };
             };
         </script>
         
