--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -10,13 +10,39 @@ author_profile: true
         <!-- for submit button -->
         <script language="javascript" type="text/javascript"> 
             function myGetItem() {
+                // for musical background
                 var handler_background = document.getElementsByName("background");
                 var background = '0';
                 for(var i=0;i<handler_background.length;i++) { 
                     if(handler_background[i].checked) 
                     background = handler_background[i].value; 
                 };
-                alert(background);
+                // for best choice
+                var handler_best = document.getElementsByName("best_choice");
+                var best_choice = '0';
+                for(var i=0;i< handler_best.length;i++) { 
+                    if(handler_best[i].checked) 
+                    best_choice = handler_best[i].value; 
+                };
+                // for worst choice
+                var handler_worst = document.getElementsByName("worst_choice");
+                var worst_choice = '0';
+                for(var i=0;i<handler_worst.length;i++) { 
+                    if(handler_worst[i].checked) 
+                    worst_choice = handler_worst[i].value; 
+                };
+                // check
+                if (background == '0' || best_choice == '0' || worst_choice == '0') {
+                    alert("Warning! You haven't finish some options!!");
+                } else if (best_choice == worst_choice) {
+                    alert("Warning! You choose the same option for the best and worst!!");
+                } else {
+                    // submit
+                    myPostToGoogle();
+                    // refresh
+                    alert('Thank you!!!');
+                    window.location.reload();
+                };
             };
         </script>
         
