--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -36,6 +36,7 @@ author_profile: true
                 } else if (best_choice == worst_choice) {
                     alert("Warning! You choose the same option for the best and worst!!");
                 } else {
+                    myPostToGoogle();
                     window.location.reload();
                 };
             };
@@ -54,6 +55,7 @@ author_profile: true
                     dataType: "xml",
                     statusCode: {
                         0: function() {
+                            alert('WTF');
                         },
                         200: function() {
                             alert('Thank you!!!');
