--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -55,7 +55,7 @@ author_profile: true
                     dataType: "xml",
                     statusCode: {
                         0: function() {
-                            alert('WTF');
+                            alert('Something is wrong!');
                         },
                         200: function() {
                             alert('Thank you!!!');
@@ -116,6 +116,12 @@ author_profile: true
             </li>
         </ol>
         <!-- submit button -->
+        <p>
+            <strong>
+                Thank you for your participation. Please press the submit button. <br>
+                After you press the button, this page will refresh and you can directly enjoy the other samples!
+            </strong>
+        </p>
         <button type="submit" onclick="myGetItem()">Submit</button>
     </body>
 </html>
