--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -79,6 +79,16 @@ author_profile: true
         
         <!-- description -->
         <h2>Long-Term Pop Piano Generation via Transformer</h2>
+        <p>
+            Hi, we are from <u><a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a></u> at Academia Sinica, Taiwan. <br>
+            We would like to develop an approach to automatically generate long-term pop piano with Transformer (one of the deep learning modules). <br><br>
+            In the following questionnaire, we generate 4 music samples which are based on the same 5-bar prompt randomly cut from real (human-made) music. <br>
+            Each sample includes the prompt in the beginning (~10 seconds). After the prompt, you can find out how the machines try to "continue" it. <br>
+            You will be asked to rate which sample is the best and worst respectively. <br>
+            And everytime you refresh the webpage (or after you press the "submit"), you could get different music samples (overall, we have 200 samples). <br>
+            We would appreciate it if you could help us fill this questionnaire several times. THANKS! <br><br>
+            If you have any questions, please feel free to contact: <u><a href="https://remyhuang.github.io/" target="_blank">Yu-Siang Huang</a></u> <br>
+        </p> 
         
         <!-- audio contents -->
         <h2 id="header2"></h2>
