--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "User Study for Transformer"
+title: "User Study for Music Generation"
 permalink: /music_generation/
 author_profile: true
 ---
@@ -78,7 +78,7 @@ author_profile: true
         </script>
         
         <!-- description -->
-        <h2>Long-Term Pop Piano Generation via Transformer</h2>
+        <h2>🙏Long-Term Pop Piano Generation via Transformer</h2>
         <p>
             Hi, we are from <u><a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a></u> at Academia Sinica, Taiwan.
             We would like to develop an approach to automatically generate long-term pop piano with Transformer (one of the deep learning modules). <br><br>
@@ -93,11 +93,11 @@ author_profile: true
         <!-- audio contents -->
         <h2 id="header2"></h2>
         <script>
-            document.getElementById("header2").innerHTML = "Machine-Generated Samples (Continuation): No." + sampleIndex; 
+            document.getElementById("header2").innerHTML = "🤖Machine-Generated Samples (Continuation): No." + sampleIndex; 
         </script>
         
         <!-- radio button -->
-        <h2>Questionnaire</h2>
+        <h2>🎯Questionnaire</h2>
         <ol>
             <li>
                 Are you studying in music-related departments or engaged in music-related industries?
