--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -78,10 +78,10 @@ author_profile: true
         </script>
         
         <!-- description -->
-        <h1>🙏 Long-Term Pop Piano Generation via Transformer</h1>
+        <h1>🙏 Long-Term Pop Piano Music Generation via Transformer</h1>
         <p>
             Hi, we are from <u><a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a></u> at Academia Sinica, Taiwan.
-            We would like to develop an approach to automatically generate long-term pop piano with Transformer (one of the deep learning modules). <br><br>
+            We would like to develop an approach to automatically generate long-term pop piano music with Transformer (one of the deep learning modules). <br><br>
             In the following questionnaire, we generate 4 music samples which are based on the same 5-bar prompt randomly cut from real (human-made) music.
             Each sample includes the prompt in the beginning (~10 seconds). After the prompt, you can find out how the machines try to "continue" it.
             You will be asked to rate which sample is the best and worst respectively.
