--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -78,7 +78,7 @@ author_profile: true
         </script>
         
         <!-- description -->
-        <h1>🙏 Long-Term Pop Piano Music Generation via Transformer</h1>
+        <h1>🎹 Long-Term Pop Piano Music Generation via Transformer</h1>
         <p>
             Hi, we are from <u><a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a></u> at Academia Sinica, Taiwan.
             We would like to develop an approach to automatically generate long-term pop piano music with Transformer (one of the deep learning modules). <br><br>
