--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -102,10 +102,7 @@ author_profile: true
             var link2 = data[sampleIndex][4];
             var link3 = data[sampleIndex][6];
             var link4 = data[sampleIndex][8];
-            $("div").html("<audio src= link1 controls preload='auto' autobuffer></audio>");
-            $("div").html("<audio src= link2 controls preload='auto' autobuffer></audio>");
-            $("div").html("<audio src= link3 controls preload='auto' autobuffer></audio>");
-            $("div").html("<audio src= link4 controls preload='auto' autobuffer></audio>");
+            alert(link1);
         </script>
         
         <!-- radio button -->
