--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -102,7 +102,7 @@ author_profile: true
             var link2 = data[sampleIndex][4];
             var link3 = data[sampleIndex][6];
             var link4 = data[sampleIndex][8];
-            alert(link1);
+            $("div").html("<audio src= link1 controls preload='auto' autobuffer></audio>");
         </script>
         
         <!-- radio button -->
