--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -103,7 +103,7 @@ author_profile: true
             var link3 = data[sampleIndex][6];
             var link4 = data[sampleIndex][8];
             alert('1');
-            $("div").html("<audio src='" + theFile + "' controls preload='auto' autobuffer></audio>");
+            $("div").html("<audio src='" + link1 + "' controls preload='auto' autobuffer></audio>");
         </script>
         
         <!-- radio button -->
