--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -6,6 +6,9 @@ author_profile: true
 ---
 
 <html>
+    <head>
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+    </head>
     <body>
         <!-- for submit button -->
         <script language="javascript" type="text/javascript"> 
