--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -107,7 +107,7 @@ author_profile: true
             document.getElementById("audio_content").innerHTML = 'Sample 1.<br><audio controls controlsList="nodownload"><source src="' + link1 + '" type="audio/mpeg"></audio><br><br>';
             document.getElementById("audio_content").innerHTML += 'Sample 2.<br><audio controls controlsList="nodownload"><source src="' + link2 + '" type="audio/mpeg"></audio><br><br>';
             document.getElementById("audio_content").innerHTML += 'Sample 3.<br><audio controls controlsList="nodownload"><source src="' + link3 + '" type="audio/mpeg"></audio><br><br>';
-            document.getElementById("audio_content").innerHTML += 'Sample 4.<br><audio controls controlsList="nodownload"><source src="' + link4 + '" type="audio/mpeg"></audio>';
+            document.getElementById("audio_content").innerHTML += 'Sample 4.<br><audio controls controlsList="nodownload"><source src="' + link4 + '" type="audio/mpeg"></audio><br><br>';
         </script>
         
         <!-- radio button -->
