--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -37,6 +37,7 @@ author_profile: true
                     alert("Warning! You choose the same option for the best and worst!!");
                 } else {
                     myPostToGoogle();
+                    alert('Thanks you!');
                     window.location.reload();
                 };
             };
@@ -55,10 +56,8 @@ author_profile: true
                     dataType: "xml",
                     statusCode: {
                         0: function() {
-                            alert('Something is wrong!');
                         },
                         200: function() {
-                            alert('Thank you!!!');
                         },
                         400: function() {
                             alert("Something is wrong!");
