--- a/_pages/music_generation.html
+++ b/_pages/music_generation.html
@@ -76,13 +76,13 @@ author_profile: true
         </script>
         
         <!-- description -->
-        <h1>🎹 Long-Term Pop Piano Music Generation via Transformer</h1>
+        <h1>🎹 Pop Piano Music Generation via Transformer</h1>
         <p>
             Hi, we are from <u><a href="https://musicai.citi.sinica.edu.tw/" target="_blank">Music and AI Lab</a></u> at Academia Sinica, Taiwan.
-            We would like to develop an approach to automatically generate long-term pop piano music with Transformer (one of the deep learning modules). <br><br>
+            We would like to develop an approach to automatically generate pop piano music with Transformer (one of the deep learning modules). <br><br>
             In the following questionnaire, we generate 3 music samples which are based on the same 5-bar prompt randomly cut from real (human-made) music.
             Each sample includes the prompt in the beginning (~10 seconds). After the prompt, you can find out how the machines try to "continue" it.
-            You will be asked to rate which sample is the best and worst respectively.
+            You will be asked to rate which sample is the best and worst respectively (in whatever criteria you like).
             And everytime you refresh the webpage (or after you press the "submit"), you could get different music samples (overall, we have 200 samples).
             We would appreciate it if you could help us fill this questionnaire several times. THANKS! <br><br>
             If you have any questions, please feel free to contact: <u><a href="https://remyhuang.github.io/" target="_blank">Yu-Siang Huang</a></u>
@@ -110,7 +110,7 @@ author_profile: true
         <h1>🎯 Questionnaire</h1>
         <ol>
             <li>
-                Are you studying in music-related departments or engaged in music-related industries?
+                Are you studying in music-related departments or working in music-production industries?
                 <form>
                     <input type="radio" name="background" value="Yes"> Yes &nbsp;&nbsp;&nbsp;
                     <input type="radio" name="background" value="No"> No
